--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -5695,6 +5695,8 @@ CONFIG_INIT_STACK_NONE=y
 # CONFIG_INIT_STACK_ALL is not set
 # CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
 # CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+CONFIG_PAGE_SANITIZE_VERIFY=y
+CONFIG_SLAB_SANITIZE_VERIFY=y
 CONFIG_CRYPTO=y
 
 #
