--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -182,6 +182,7 @@ CONFIG_RD_LZMA=y
 # CONFIG_RD_LZ4 is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
 CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_SYSCTL=y
@@ -278,6 +279,7 @@ CONFIG_THIN_ARCHIVES=y
 CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
+# CONFIG_THINLTO is not set
 # CONFIG_LTO_NONE is not set
 CONFIG_LLVM_POLLY=y
 CONFIG_LTO_CLANG=y
