--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -123,7 +123,7 @@ CONFIG_RCU_NEED_SEGCBLIST=y
 CONFIG_RCU_FANOUT=64
 CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_RCU_FAST_NO_HZ=y
-# CONFIG_RCU_BOOST is not set
+CONFIG_RCU_BOOST=y
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
@@ -180,8 +180,8 @@ CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
-# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+# CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE not set
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_SYSCTL=y
@@ -724,7 +724,7 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 
@@ -2785,6 +2785,7 @@ CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 # CONFIG_QORIQ_THERMAL is not set
+# CONFIG_DEVFREQ_BOOST is not set
 
 #
 # ACPI INT340X thermal drivers
