--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -727,6 +727,15 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=0
+CONFIG_WAKE_BOOST_DURATION_MS=2000
+CONFIG_INPUT_BOOST_FREQ_LP=0
+CONFIG_INPUT_BOOST_FREQ_PERF=0
+CONFIG_MAX_BOOST_FREQ_LP=1555000
+CONFIG_MAX_BOOST_FREQ_PERF=2016000
+CONFIG_MIN_FREQ_LP=940800
+CONFIG_MIN_FREQ_PERF=1056000
 
 #
 # CPU frequency scaling drivers
@@ -2785,7 +2794,11 @@ CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 # CONFIG_QORIQ_THERMAL is not set
-# CONFIG_DEVFREQ_BOOST is not set
+CONFIG_DEVFREQ_BOOST=y
+CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=80
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=400
+CONFIG_DEVFREQ_MSM_CPUBW_BOOST_FREQ=9155
+CONFIG_DEVFREQ_MSM_LLCCBW_BOOST_FREQ=5161
 
 #
 # ACPI INT340X thermal drivers
