--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -1462,6 +1462,7 @@ CONFIG_UID_SYS_STATS=y
 CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_QPNP_MISC is not set
 # CONFIG_C2PORT is not set
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # EEPROM support
