--- a/arch/arm64/boot/dts/qcom/sm8150-gpu-v2.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm8150-gpu-v2.dtsi
@@ -42,6 +42,13 @@
 		opp-257000000 {
 			opp-hz = /bits/ 64 <257000000>;
 			opp-microvolt = <RPMH_REGULATOR_LEVEL_LOW_SVS>;
+
+		};
+		
+		opp-140000000 {
+			opp-hz = /bits/ 64 <140000000>;
+			opp-microvolt = <RPMH_REGULATOR_LEVEL_MIN_SVS>;
+
 		};
 	};
 };
