--- a/arch/arm64/configs/vayu_defconfig
+++ b/arch/arm64/configs/vayu_defconfig
@@ -49,10 +49,10 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-SilonT-Lucia"
-CONFIG_LOCALVERSION_AUTO=y
-CONFIG_LOCALVERSION_SHA=y
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_LOCALVERSION="-SRv1"
+# CONFIG_LOCALVERSION_AUTO is not set
+# CONFIG_LOCALVERSION_SHA is not set
+CONFIG_DEFAULT_HOSTNAME="113"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
